Stabilizes the tests